# GameCubeToolkit

./: .gitignore  CMakeLists.txt  DOLPatcher.cpp  README.md  TODO.md
GCToolkit/include/Disassembler/: PowerPC.h  Program.h  Util.h
GCToolkit/include/Parser/: BNR.h  DOL.h  FST.h  GCM.h
GCToolkit/include/Platform/: FileSelector.h
GCToolkit/include/Support/: DiskSingleton.h
GCToolkit/include/Unpacker/: Repacker.h  Unpacker.h
GCToolkit/include/Util/: Binary.h  FileUtil.h  MemoryMap.h  int24.h
GCToolkit/lib/: CMakeLists.txt
GCToolkit/lib/Disassembler/: CMakeLists.txt  PowerPC.cpp  Program.cpp  Util.cpp
GCToolkit/lib/Parser/: BNR.cpp  CMakeLists.txt  DOL.cpp  FST.cpp  GCM.cpp
GCToolkit/lib/Platform/: CMakeLists.txt  FileSelector.cpp
GCToolkit/lib/Unpacker/: CMakeLists.txt  Repacker.cpp  Unpacker.cpp
GCToolkit/lib/Util/: CMakeLists.txt  FileUtil.cpp  MemoryMap.cpp  MemoryStream.cpp
GUILib/include/: Window.h
GUILib/include/ImGui/: UIBase.h  UIManager.h
GUILib/lib/: CMakeLists.txt  Window.cpp
GUILib/lib/ImGui/: CMakeLists.txt  UIBase.cpp  UIManager.cpp
Util/include/: Binary.h  Error.h  MemoryStream.h  String.h
Util/include/Logger/: ConsoleLogger.h  Logger.h  LoggerBase.h
Util/lib/: CMakeLists.txt  Error.cpp  FileUtil.cpp  MemoryMap.cpp  MemoryStream.cpp  String.cpp
Util/lib/Logger/: CMakeLists.txt  ConsoleLogger.cpp  Logger.cpp
include/Disassembler/: PowerPC.h  Program.h
include/Parser/: DOL.h
include/Util/: Binary.h
lib/: CMakeLists.txt
lib/Disassembler/: CMakeLists.txt  PowerPC.cpp  Program.cpp
lib/Parser/: DOL.cpp
test/: CMakeLists.txt
test/Disassembler/: CMakeLists.txt  main.cpp
test/Parser/: CMakeLists.txt  TestDOL.cpp
tools/: CMakeLists.txt
tools/Disassembler/: CMakeLists.txt  DOLDisassembler.cpp
tools/GUI/: CMakeLists.txt  GUI.cpp
tools/GUI/include/: GUIProgram.h
tools/GUI/include/ImGuiObjects/: DOLDisassemblerGUI.h  LoggerGui.h  PackageViewerGui.h  UI_ID.h  UnpackerGui.h
tools/GUI/include/ImGuiObjects/FileViewers/: BNRViewerGui.h  DOLViewerGui.h  FileViewerBase.h  TxtViewerGui.h
tools/GUI/lib/: CMakeLists.txt  GUIProgram.cpp
tools/GUI/lib/ImGuiObjects/: CMakeLists.txt  DOLDisassemblerGUI.cpp  LoggerGui.cpp  PackageViewerGui.cpp  UnpackerGui.cpp
tools/GUI/lib/ImGuiObjects/FileViewers/: BNRViewerGui.cpp  DOLViewerGui.cpp  FileViewerBase.cpp  TxtViewerGui.cpp
tools/Unpacker/: CMakeLists.txt  GCMUnpacker.cpp
